========================
0.0.95
========================

========================
0.0.94
========================

- improved UI Builder compiler
- improved `FlowStream` initial header for WebSocket
- fixed loading `.html` plugins

========================
0.0.93
========================

- fixed internal FlowStream module (critical)

========================
0.0.92
========================

- updated Tangular template engine
- improved routing, actions can use `-->` instead of `* -->`
- fixed parsing arrays in the `config`
- fixed FlowStream stats in `instance.newmessage()`
- updated `REQUEST()` - `timeout` is optional and may be disabled
- improved `MultipartParser`
- fixed closing proxied WebSocket in the `PROXY()` method
- added `F.uibuildercompiler(opt, [callback])` method
- improved `String.toJSONSchema()` + fixed arrays with external schemas
- updated Flow module
- added support for `jsonschemas/*.txt` with inline implementation of the JSON schemas
- added a `String.markdown(opt)` parser
- enabled `.xslt`, `.xsd` and `.xls` extensions for handling static files
- fixed sending messages to all subscribers in TMS (critical)
- fixed compiling HTML in CMS
- fixed `signal` in the `F.exit(signal)` method
- improved CMS compiler
- fixed JS minification

========================
0.0.91
========================

- added `.flow` extension for the watcher due to auto-restarting app
- added `/flowstreams/` directory for inline FlowStreams
- added FlowStream module into the core
- fixed `PATH.extensions()`
- fixed declared routes in the `NEWACTION()` method

========================
0.0.90
========================

- improved `edit` source-code functionality
	- improved schema by adding `nocompress {Boolean}` field
- fixed blacklist for localization in remote editing
- added `flow.cloning {Boolean}` for cloning of message data (default: `true`)
- added missing `headers` argument in the `res.jsonstring(data, [headers])` method