@@ -2,6 +2,8 @@
 0.0.95
 ========================
 
+- added alias `Array.TfindIndex` (because some of NPM used their own)
+
 ========================
 0.0.94
 ========================
